<resources>
    <string name="app_name">Computer Fundamentals Quiz</string>


    <string name="question_1">1.Which of the following languages is more suited to a structured program?</string>
    <string name="question_2">2.A computer assisted method for the recording and analyzing of existing or hypothetical systems is</string>
    <string name="question_3">3.The brain of any computer system is.</string>
    <string name="question_4">4.What difference does the 5th generation computer have from other generation computers?</string>
    <string name="question_5">5.Which of the following computer language is used for artificial intelligence?</string>
    <string name="question_6">6.The tracks on a disk which can be accessed without repositioning the R/W heads is</string>
    <string name="question_7">7.A section of code to which control is transferred when a processor is interrupted is known as</string>


</resources>
